<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:paddingHorizontal="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/windowBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:elevation="10dp"
        android:padding="0dp"
        app:cardCornerRadius="12dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/new_app_content_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_qr_app_icon" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/new_app_dialog_title"
        android:textSize="22sp"
        android:textColor="@color/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        android:text="@string/new_app_dialog_description"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/button_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/native_ad_exit_dialog_yes"
        android:textColor="@color/textTitle"
        android:textSize="18sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_later"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <Button
        android:id="@+id/button_later"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/com_facebook_likeview_text_color"
        android:text="@string/premium_no"
        android:textColor="@color/textTitle"
        android:textSize="16sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button_yes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>