<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/windowBackground"
xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/text_margin">
    <!--  This is your template view -->

    <FrameLayout
        android:id="@+id/fl_adplaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/native_ad_exit_dialog_message"
        android:textColor="@color/textTitle"
        android:textSize="@dimen/text_description"
        app:layout_constraintTop_toBottomOf="@+id/fl_adplaceholder"
        />

    <Button
        android:id="@+id/button_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/native_ad_exit_dialog_yes"
        android:textColor="@color/textTitle"
        android:background="@color/colorTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_later"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_later"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:text="@string/native_ad_exit_dialog_no"
        android:textColor="@color/textTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_yes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>