<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.ascetx.flashlight.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15">
            <ImageView
                android:id="@+id/flashlight_groove"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/flashlight_groove"/>

            <com.yodo1.mas.banner.Yodo1MasBannerAdView
                android:id="@+id/yodo1_mas_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:visibility="invisible"
                app:adSize="AdaptiveBanner" />

            <FrameLayout
                android:id="@+id/ad_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"/>
            <!-- Below is for SMART_BANNER and NOT for adaptive banner as adaptive banner is loaded programatically -->
            <!--<com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/content_banner_ad"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/main_activity_banner_ad_id">
            </com.google.android.gms.ads.AdView>-->
        </RelativeLayout>

        <ImageView
            android:id="@+id/flashlight_strobe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/flashlight_strobe"
            android:contentDescription="@string/flashlight_strobe_description" />

        <RelativeLayout
            android:id="@+id/flashlight_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="77.5"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_flashlight_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/fl_bg"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tvDirection"
                android:layout_width="99.05dp"
                android:layout_height="28.57dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/direction_display"
                android:gravity="center"
                android:text="123"
                android:textColor="@android:color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp"
                android:padding="0dp"
                app:cardCornerRadius="8dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:elevation="10dp"
                tools:targetApi="lollipop">

                <ImageView
                    android:id="@+id/roundedImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/new_app_content_description"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_qr_app_icon" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvCompassError"
                android:visibility="visible"
                android:layout_below="@+id/tvDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/compass_not_supported"/>
            <ImageView
                android:id="@+id/compass_arrow"
                android:layout_below="@+id/tvCompassError"
                android:layout_width="9dp"
                android:layout_height="7.76dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/compass_arrow"/>

            <FrameLayout
                android:id="@+id/compass_fl"
                android:layout_below="@+id/compass_arrow"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <ImageView
                    android:id="@+id/ivCompassBg"
                    android:layout_width="87.62dp"
                    android:layout_height="87.62dp"
                    android:layout_gravity="center"
                    android:src="@drawable/compass_background"
                    android:contentDescription="@string/flashlight_compass_description" />
                <ImageView
                    android:id="@+id/imageViewCompass"
                    android:layout_width="72.41dp"
                    android:layout_height="72.41dp"
                    android:layout_gravity="center"
                    android:src="@drawable/compass_disc"
                    android:contentDescription="@string/flashlight_compass_description" />
                <ImageView
                    android:id="@+id/ivComapssScreen"
                    android:layout_width="72.41dp"
                    android:layout_height="72.41dp"
                    android:layout_gravity="center"
                    android:src="@drawable/compass_screen"
                    android:contentDescription="@string/flashlight_compass_description" />
            </FrameLayout>
            <ImageView
                android:id="@+id/btnScreenLight"
                android:layout_below="@+id/compass_fl"
                android:layout_centerHorizontal="true"
                android:layout_width="51.43dp"
                android:layout_height="51.43dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/screen_light_btn_off"
                android:contentDescription="@string/flashlight_screen_light_description" />

            <ImageView
                android:id="@+id/btnSwitch"
                android:layout_width="203.81dp"
                android:layout_height="203.81dp"
                android:layout_below="@id/btnScreenLight"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/toggle_flashlight"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/power_btn_on" />
            <RelativeLayout
                android:id="@+id/time_rl"
                android:layout_below="@id/btnSwitch"
                android:layout_centerHorizontal="true"
                android:layout_width="320dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/fabBtnSos"
                    android:layout_width="51.43dp"
                    android:layout_height="51.43dp"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:contentDescription="@string/content_sos"
                    android:focusable="true"
                    android:onClick="flashSOS"
                    android:src="@drawable/sos_btn_off" />
                <RelativeLayout
                    android:id="@+id/time_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">
                    <DigitalClock
                        android:id="@+id/digitalClock"
                        android:layout_width="154.29dp"
                        android:layout_height="51.43dp"
                        android:gravity="center"
                        android:background="@drawable/time_display"
                        android:textColor="#17d409"
                        android:textSize="25sp"
                        android:textAllCaps="true"
                        android:textStyle="normal" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/fabBtnRemAd"
                    android:layout_width="51.43dp"
                    android:layout_height="51.43dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:contentDescription="@string/content_no_ads"
                    android:focusable="true"
                    android:onClick="removeAd"
                    android:src="@drawable/noad_btn_off"
                    tools:ignore="UsingOnClickInXml" />
            </RelativeLayout>
            <!--<FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_alignBottom="@+id/btnScreenLight"
                android:layout_alignRight="@+id/compass_fl"
                android:layout_alignEnd="@+id/compass_fl">
                <ImageView
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_settings_24"/>
            </FrameLayout>-->

            <ImageView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnScreenLight"
                android:layout_alignBottom="@+id/btnScreenLight"
                android:layout_toEndOf="@+id/btnScreenLight"
                android:layout_toRightOf="@+id/btnScreenLight"
                android:contentDescription="@string/title_activity_settings"
                app:srcCompat="@drawable/settings_btn_off" />

        </RelativeLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_slider"
        android:layout_marginTop="146dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/slider_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/slider_background"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/strobe_seekbar"
            android:max="100"
            android:progress="10"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:maxHeight="10dp"
            android:progressDrawable="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumb="@drawable/slider_btn_off" />
    </FrameLayout>

</RelativeLayout>
